[package]
name = "rust-spp"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
raster = "0.2.0"
clap = "2.33.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
time = "0.2.22"
tokio = "0.3.1"
futures = "0.3.7"
tokio-core = "0.1.17"
parking_lot = "*"
[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "mandelbrot_rustspp"
harness = false

[[bench]]
name = "mandelbrot_pixbypix"
harness = false
